@@ -87,6 +87,7 @@ CVS HEAD:
      relative-positioning syntax
    * added support for theme inheritance, to avoid duplicating mostly-unchanged
      code
+ * added a "droid" game command, and allow for computer player to do a campaign
  * updated unix manpages
  * "," is no longer the column separator, it does not have to be escaped
    anymore in some translations, "=" is the new separator (#10368)
